# flareos

./: .eslintrc.cjs  .eslintrc.json  LICENSE  README.md  actions.html  calculator.html  crowdin.yml  discover.html  files.html  launcher.html  package-lock.json  package.json  settings.html  start.html  store.html  tailwind.config.ts  terminal.html  tsconfig.json  vite.config.ts  widgets.html
.github/: dependabot.yml
.github/workflows/: arm.yml  build.yml  eslint.yml  remove-artifacts.yml
locales/: cs.json  de.json  et.json  lo.json  main.json  pl.json
resources/locales/: en.json
src/: App.tsx  helpers.ts  i18n.ts  main.tsx  mime_types.ts  shortcuts.ts  store_manager.ts
src-rust/: Cargo.toml  tauri.conf.json
src-rust/capabilities/: main.json
src-rust/src/: main.rs
src-rust/src/apps/: run_app.rs  terminal.rs
src-rust/src/avatar/: compare_avatars.rs  get_avatar.rs  update_avatar.rs
src-rust/src/bluetooth/: bt_devices.rs  bt_scan.rs  is_bluetooth.rs
src-rust/src/files/: read_dir.rs
src-rust/src/gamma/: get_current_gamma.rs  set_current_gamma.rs
src-rust/src/icons/: get_icon.rs
src-rust/src/store/: download_icon.rs  installer.rs
src-rust/src/unix/: create_user.rs  pipewire.rs  run_command.rs
src-rust/src/utils/: encryption.rs
src-rust/src/volume/: get_current_sink.rs  get_current_volume.rs  list_sinks.rs  set_current_sink.rs  set_current_volume.rs
src-rust/src/wm/: activate.rs  add_permissions.rs  get_active_window.rs  get_windows.rs
src/api/auth/: exists.ts  login.ts
src/apps/: embededApps.ts
src/assets/: CountryFlags.tsx  languages.ts
src/assets/css/: App.css  Skeleton.css
src/components/: Loading.tsx
src/components/actions/: ActionsBluetooth.tsx  ActionsButton.tsx  ActionsMenu.tsx  ActionsMixer.tsx  FullMixer.tsx  actionsState.ts  actionsState.tsx
src/components/auth/: Auth.tsx  AuthCurrentUser.tsx  AuthFooter.tsx  AuthUsers.tsx
src/components/desktop/: Desktop.tsx  DesktopContextMenu.tsx  DesktopWidgets.tsx  Widget.tsx
src/elements/: Button.tsx  Toggle.tsx
src/functions/: isOnline.ts  useBlobUrl.ts
src/index/: StartComponent.tsx  actions.tsx  files.tsx  settings.tsx  start.tsx  store.tsx  terminal.tsx  widgets.tsx
src/manager/: icon_manager.ts  install_manager.ts  speaker_manager.ts  store_manager.ts
src/state/: componentState.tsx  currentUserState.ts  themeState.ts
src/types/: app.ts  bluetooth.ts  storeApp.ts  supportedLanguages.ts  user.ts  widget.ts  window.ts
src/updater/: isLatest.ts
(+107 files in other folders)
