[package]
name = "airos"
version = "1.0.0"
description = "The Air Operating System"
authors = ["air"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-store = "2.0.0-beta.5"
tauri-plugin = "2.0.0-beta.10"
serde_json = "1.0"
bcrypt = "0.15.1"
portable-pty = "0.8.1"
serde = "1.0.197"
airos_wmctrl = { git = "https://github.com/madebyair/airos-wmctrl" }
percent-encoding = "2.3.1"
http-range = "0.1.5"
http = "1.1.0"
nix = { version = "0.28.0", features = ["user"] }
uuid = { version = "1.8.0", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
