[package]
name = "flareos"
version = "1.0.0"
description = "The Flare Operating System"
authors = ["air"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.5", features = ["unstable"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
serde_json = "1.0.110"
bcrypt = "0.15.1"
portable-pty = "0.8.1"
serde = "1.0.203"
airos_wmctrl = { git = "https://github.com/madebyair/airos-wmctrl" }
percent-encoding = "2.3.1"
http-range = "0.1.5"
http = "1.1.0"
nix = { version = "0.29.0", features = ["user"] }
uuid = { version = "1.4.0", features = ["v4"] }
tauri-plugin-global-shortcut = "2.0.1"
sha256 = "1.5.0"
tokio = "1.40.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
